# cameracoding

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  Readme.md  main.c  sampleDCT.h
docs/: README.md  perfomance22.md
files/: Readme.md
src/: block.c  block.h  consts.h  core.c  core.h  data_frame.c  data_frame.h  dct.c  dct.h  file_manager.c  file_manager.h  logger.c  logger.h  main.c  quantize.c  quantize.h  reader.c  reader.h  run_level.c  run_level.h  sampleDCT.h  src.cmake  writter.c  writter.h  zigzag.c  zigzag.h
test/: CMakeLists.txt  CmakeLists.txt
test/src/: dct.cpp  run_level.cpp  src.cmake  zigzag.cpp
tests/: CMakeLists.txt  simple.cpp
tools/: Readme.md  graph.py
